--- a/LoggerApp/App.config
+++ b/LoggerApp/App.config
@@ -4,6 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <appSettings>
-    <add key="Path" value="C:\Users\zfw10060\Downloads\LogsTest\" /> <!--Diff-->
+    <add key="Path" value="C:\Users\zfw10060\Downloads\LogsTest\" />
+	<add key="ErrorsLogPath" value="C:\Users\zfw10060\Downloads\LogsTest\" />
   </appSettings>
 </configuration>
