--- a/LoggerApp/LoggerApp.csproj
+++ b/LoggerApp/LoggerApp.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E6A4B118-3F4E-4200-9DE1-63F308D951F2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LoggerApp</RootNamespace>
-    <AssemblyName>LoggerApp</AssemblyName>
+    <RootNamespace>ADILogMinerApp</RootNamespace>
+    <AssemblyName>ADILogMinerApp</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -106,6 +106,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="WaitForm.resx">
       <DependentUpon>WaitForm.cs</DependentUpon>
